feat: 添加寒假营题解，并更新首页导航

--- a/index.html
+++ b/index.html
@@ -115,14 +115,11 @@
 
     <ul class="notes-list">
       <li class="note-item">
-        <a href="algorithm.html">🧮 算法笔记</a>
+        <a href="items/algorithm/algorithm.html">🧮 算法笔记</a>
       </li>
-      <!-- 你可以在这里添加更多笔记 -->
-      <!-- 示例：
       <li class="note-item">
-        <a href="math.html">📐 数学基础</a>
+        <a href="items/algorithm/2025-2026寒假营第一场.html">🏆 2025-2026 寒假营第一场题解</a>
       </li>
-      -->
     </ul>
 
     <footer>
