--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 
     <ul class="notes-list">
       <li class="note-item">
-        <a href="items/algorithm/algorithm.pdf">🧮 算法笔记</a>
+        <a href="items/algorithm/algorithm.html">🧮 算法笔记</a>
       </li>
       <li class="note-item">
         <a href="items/algorithm/2025-2026寒假营第一场.html">🏆 2025-2026 寒假营第一场题解</a>
