--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
         <a href="items/algorithm/algorithm.html">🧮 算法笔记</a>
       </li>
       <li class="note-item">
-        <a href="items/algorithm/2025-2026寒假营第一场.html">🏆 2025-2026 寒假营第一场题解</a>
+        <a href="items/algorithm/winter_camp/winter_camp_1.pdf">🏆 2025-2026 寒假营第一场题解</a>
       </li>
     </ul>
 
