add network notes about final exam

--- a/index.html
+++ b/index.html
@@ -118,6 +118,11 @@
         <a href="items/algorithm/algorithm.html">🧮 算法笔记</a>
       </li>
     </ul>
+    <ul class="notes-list">
+      <li class="note-item">
+        <a href="items/curriculum/network.html">🌐 计网笔记</a>
+      </li>
+    </ul>
 
     <footer>
       <p>Powered by Cloudflare Pages · 自动更新</p>
